refactor: 불필요한 getter 삭제